[package]
name = "decryptor"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
openssl = "0.10.64"

[package.metadata.cross.build]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get -y install libssl-dev:$CROSS_DEB_ARCH openssl:$CROSS_DEB_ARCH"
]
