[package]
name = "decryptor"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
openssl = "0.10.64"

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
dockerfile = "../docker/Dockerfile.aarch64-unknown-linux-gnu"
pre-build = [
    "dpkg --add-architecture arm64",
    "apt-get update && apt-get -y install libssl-dev:arm64"
]
